<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="24dp"
    android:background="@color/white">

    <ImageView
        android:src="@drawable/sih"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:contentDescription="@string/coming_soon_image"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/we_are_working_on_this_feature"
        android:textSize="22sp"
        android:textStyle="bold"
        android:gravity="center"
        android:paddingTop="20dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/this_feature_will_arrive_in_the_next_version_of_the_sih_build"
        android:textSize="16sp"
        android:gravity="center"
        android:paddingTop="10dp"/>

</LinearLayout>
